crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@invalid_cast.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "fn main() {\n\tlet a = print(\"Unit\")\n\tlet b: I32 = cast(a)\n\tprint(b)\n}\n"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/invalid_cast.au
---
Error: Invalid cast
   ╭─[ main:3:15 ]
   │
 3 │     let b: I32 = cast(a)
   │                  ───┬───  
   │                     ╰───── Can not cast from `()` to `I32`
───╯
