crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@invalid_update_global.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "fn main() {\n\tfoo = 4\n}\n\nfn foo() {}\n"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/invalid_update_global.au
---
Error: Immutable variable
   ╭─[ main:2:2 ]
   │
 2 │     foo = 4
   │     ──┬─  
   │       ╰─── Cannot write to an immutable variable
───╯
