crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@recover_assignment.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "\nfn main() {\n\tlet a = 0\n\ta ^= 1\n}\n"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/recover_assignment.au
---
Error: Unexpected token
   ╭─[ main:4:4 ]
   │
 4 │     a ^= 1
   │       │ 
   │       ╰─ got "^"
   │ 
   │ Note: Expected `+=`, `-=`, `*=`, `/=`, `%=` or `=`
───╯
