crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@recover_block.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "fn main() {\n    let\n}\n\nfn bar() {}"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/recover_block.au
---
Error: Unexpected token
   ╭─[ main:2:8 ]
   │
 2 │     let
   │        │ 
   │        ╰─ got "\n"
   │ 
   │ Note: Expected `<identifier>`
───╯
